<resources>
    <string name="app_name">Intern Assignment</string>
    <string name="inter_home">InternShala</string>
    <string name="login_home">Login Screen</string>
    <string name="sign_home">Create Account</string>
    <string name="student_dash">Dashboard</string>

    <!-- App String-->
    <string name="user_desc">Find a Skill you want to Acquire.</string>
    <string name="another_user_desc">Find all the Skill for which you had Applied.</string>
    <string name="user_name">Hey </string>
    <string name="total_weeks">%1$d Weeks</string>
    <string name="app_create_acc">Create Account.</string>
    <string name="app_email_hint">Email</string>
    <string name="app_pass_hint">Password</string>
    <string name="app_remember">Remember Me</string>
    <string name="app_login_btn">Login</string>
    <string name="app_log_Ot_btn">Log Out</string>
    <string name="app_sign_btn">Sign Up</string>
    <string name="please_wait">Please Wait,</string>
    <string name="apply_now">Apply Now!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="app_next">Register</string>
    <string name="Log_out_msg">Are you Sure want to log Out?</string>
    <!-- Sign Up Screen -->
    <string name="wrong_detail">Pleas,Enter the Correct Info</string>
    <string name="wrong_email">Please,Enter the Correct Email</string>
    <string name="wrong_password">Password is Weak :( </string>
    <string name="wrong_phone">Please,Enter the Correct Phone Number</string>
</resources>