<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/workShopFragment">
    <fragment
        android:id="@+id/workShopFragment"
        android:name="com.example.internassigment.fragments.WorkShopFragment"
        android:label="@string/inter_home"
        tools:layout="@layout/workshop_fragment">
        <action
            android:id="@+id/action_workShopFragment_to_workShopDash"
            app:destination="@id/workShopDash"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/loginScreen"
        android:name="com.example.internassigment.fragments.LoginScreen"
        android:label="@string/login_home"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginScreen_to_registrationScreen"
            app:destination="@id/registrationScreen"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
        <argument
            android:name="course"
            app:argType="com.example.internassigment.data.CourseName" />
        <action
            android:id="@+id/action_loginScreen_to_studentDashBoard"
            app:destination="@id/studentDashBoard"
            app:popUpTo="@id/loginScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registrationScreen"
        android:name="com.example.internassigment.fragments.RegistrationScreen"
        android:label="@string/sign_home"
        tools:layout="@layout/registration_fragment">
        <argument
            android:name="course"
            app:argType="com.example.internassigment.data.CourseName" />
        <action
            android:id="@+id/action_registrationScreen_to_studentDashBoard"
            app:destination="@id/studentDashBoard"
            app:popUpTo="@id/registrationScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/studentDashBoard"
        android:name="com.example.internassigment.fragments.StudentDashBoard"
        android:label="@string/student_dash"
        tools:layout="@layout/student_dashboard_framgent" >
        <argument
            android:name="regflag"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_studentDashBoard_to_workShopFragment"
            app:destination="@id/workShopFragment" />
    </fragment>
    <fragment
        android:id="@+id/workShopDash"
        android:name="com.example.internassigment.fragments.WorkShopDash"
        android:label="{title}"
        tools:layout="@layout/work_shop_dash_fragment">
        <action
            android:id="@+id/action_workShopDash_to_loginScreen"
            app:destination="@id/loginScreen"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
        <argument
            android:name="title"
            android:defaultValue="Working"
            app:argType="string" />
        <argument
            android:name="course"
            app:argType="com.example.internassigment.data.CourseName" />
        <action
            android:id="@+id/action_workShopDash_to_studentDashBoard"
            app:destination="@id/studentDashBoard" />
    </fragment>
    <dialog
        android:id="@+id/dialog"
        android:name="com.example.internassigment.utils.MyDialog"
        android:label="Dialog">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="message"
            app:argType="string" />
    </dialog>
    <action
        android:id="@+id/action_global_dialog"
        app:destination="@id/dialog" />
    <dialog
        android:id="@+id/customLog"
        android:name="com.example.internassigment.utils.CustomLog"
        android:label="CustomLog" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="message"
            app:argType="string" />
    </dialog>
    <action
        android:id="@+id/action_global_customLog"
        app:destination="@id/customLog" />
</navigation>